# Static-Website-Search

./: Cargo.toml
src/: cli.rs  compressor.rs  estimator.rs  hash.rs  lib.rs  main.rs  murmur3.rs  preprocessor.rs  sbf.rs  search_template.html  spectral_bloom_filter.rs
src/assets/: demo.html  search_template.html  static_website_search.js  tokens.json
src/compressor/: base2p15.rs
src/estimator/: spectral_bloom_filter.rs
src/hasher/: murmur3.rs
src/preprocessor/: format_structs.rs  minimize_width.rs  naive.rs
