[package]
name = "static_website_search"
version = "0.1.0"
authors = ["decimalpack <decimalpack@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "spectral_bloom_filter"
path = "src/spectral_bloom_filter.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "cli"
path = "src/cli.rs"

[dev-dependencies]
proptest = "1.0.0"