[package]
name = "static_website_search"
version = "0.1.0"
authors = ["decimalpack <decimalpack@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.2"

[dev-dependencies]
proptest = "1" 